--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,21 +6,13 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     #    这里写生产环境地址 （线上地址）
-    url: jdbc:mysql://localhost:3306/usercenter
+    url: jdbc:mysql://39.101.78.159:3306/usercenter
     username: root
-    password: 1234
+    password: 123456
   # session 失效时间
   session:
     timeout: 86400
+    # 因为127.0.0.1可能默认使用 ipv6的地址，所以设置address:0.0.0.0可以
+    # 讲其修改为ipv4
 server:
-  port: 8080
-  servlet:
-    context-path: /api
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: false
-  global-config:
-    db-config:
-      logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
-      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+  address: 0.0.0.0
